fix z-index pos

--- a/src/client/styles/scss/_search.scss
+++ b/src/client/styles/scss/_search.scss
@@ -178,7 +178,7 @@
 .search-page-input {
   position: sticky;
   top: 65px;
-  z-index: 1;
+  z-index: 15;
 
   margin-bottom: 15px;
 
